--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 python:
     - 3.6
     - 3.7
-install: pip install --user -r requirements.txt
+install: pip install -r requirements.txt
 script:
     - flake8
     - pytest
