--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ python:
 install:
     - pip install flake8
     - pip install -r requirements.txt
+before_script:
+    - export FLASK_APP="$TRAVIS_BUILD_DIR/app.py"
+    - export FLASK_DEBUG=1
 script:
     - flake8
     - pytest
+    - flask test
